# Insegment

./: .gitignore  NEXT_SESSION.md  README.md  annotation_server.py  pyproject.toml  todo.md
docs/: security_review_2026-04.md
src/insegment/: __init__.py  app.py  cli.py  inference_core.py  routes_annotations.py  routes_export.py  routes_images.py  routes_inference.py  routes_labels.py  routes_semiannotation.py  routes_tiles.py  state.py  utils.py
src/insegment/exporters/: __init__.py
src/insegment/models/: __init__.py  bacdetr.py  base.py
src/insegment/templates/: index.html
templates/: index.html
tests/: test_api_validation.py  test_bacdetr_filter.py  test_exporters.py  test_shapes.py  test_smoke.py
