[build-system]
# This tells pip HOW to build the package. setuptools is the standard tool.
# "build-system" = the machinery that turns your code into an installable package.
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "insegment"
version = "0.1.0"
description = "Interactive instance segmentation annotation tool for microscopy and beyond"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sergio", email = "sergiocz28@users.noreply.github.com"},
]
keywords = ["annotation", "segmentation", "microscopy", "instance-segmentation", "labeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

# Dependencies: packages that MUST be installed for insegment to work.
# These get auto-installed when someone runs `pip install insegment`.
dependencies = [
    "flask>=2.0",
    "numpy>=1.20",
    "Pillow>=9.0",
    "tifffile>=2021.0",
]

# Optional dependencies: not required, but needed for specific features.
# Install with: pip install insegment[bacdetr]
[project.optional-dependencies]
bacdetr = [
    "torch>=1.10",
    "opencv-python>=4.5",
]
dev = [
    "pytest",
    "ruff",
]

# CLI entry point: this creates the `insegment` command.
# When someone types `insegment` in their terminal, Python runs
# the `main()` function inside `src/insegment/cli.py`.
[project.scripts]
insegment = "insegment.cli:main"

[project.urls]
Homepage = "https://github.com/SergioCZ28/Insegment"
Repository = "https://github.com/SergioCZ28/Insegment"
Issues = "https://github.com/SergioCZ28/Insegment/issues"

# Tell setuptools where to find the code (inside src/)
[tool.setuptools.packages.find]
where = ["src"]

# Include non-Python files (like HTML templates) in the package
[tool.setuptools.package-data]
insegment = ["templates/**/*"]
